Minor text change

--- a/testbok/EPUB/sekundart-innehall.xhtml
+++ b/testbok/EPUB/sekundart-innehall.xhtml
@@ -11,7 +11,7 @@
   <h1>Test av sekundärt innehåll</h1>
   <section>
     <h2>Sekundärt innehåll ska ej läsas upp automatiskt</h2>
-    <p>Efter denna text följer en sidofält (aside).</p>
+    <p>Efter denna text följer ett sidofält (aside).</p>
     <aside epub:type="sidebar" class="secondary-content">
       Text inom sidofält. Bör ej ha lästs upp.
     </aside>
