alttext attributes for math elements

--- a/testbok/EPUB/matte-formler.xhtml
+++ b/testbok/EPUB/matte-formler.xhtml
@@ -9,7 +9,7 @@
 		<div epub:type="pagebreak" id="Page_006" title="6"/>
 		<h1>Matteformler</h1>
 		<p>Efter detta stycke kommer en matematisk formel.</p>
-		<math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
+		<math xmlns="http://www.w3.org/1998/Math/MathML" display="block" alttext="x = (2c) / (-b +- sqrt(b^2 - 4ac))">
 		    <mrow>
        			<mi>x</mi>
        			<mo>=</mo>
@@ -38,7 +38,7 @@
         		</mfrac>
     		</mrow>
 		</math>
-		<p>Text med matematik inline: <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline"><mrow><msup><mi>x</mi><mn>2</mn></msup></mrow></math>.</p>
+		<p>Text med matematik inline: <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" alttext="x^2"><mrow><msup><mi>x</mi><mn>2</mn></msup></mrow></math>.</p>
 		</section>
 	</body>
 </html>
