Numrerad lista har tillagts.

--- a/testbok/EPUB/listor.xhtml
+++ b/testbok/EPUB/listor.xhtml
@@ -24,7 +24,19 @@
 
     <p>Texten efter lista.</p>
   </section>
+  <section>
+    <h2>Numrerad lista</h2>
+    <p>Efter denna text följer en numrerad lista.</p>
 
+    <ol>
+      <li>Saab</li>
+      <li>Volvo</li>
+      <li>Volkswagen</li>
+    </ol>
+
+    <p>Texten efter lista.</p>
+  </section>
+  
   <section>
     <h2>Definitionslista</h2>
 
