Match wikipedia headers

--- a/testbok/EPUB/rubriker-och-stycken.xhtml
+++ b/testbok/EPUB/rubriker-och-stycken.xhtml
@@ -13,12 +13,12 @@
 			<p>Stycke 2: På Skansen finns idag (2014) cirka 140 byggnader från Skandinavien varav den äldsta är Vastveitloftet från 1300-talet.</p>
 			<p>Stycke 3: Skansen övergick den 1 juli 1963 till att bli en stiftelse med Nordiska museet, Stockholms stad och staten som huvudmän.</p>
 			<section>
-				<h2 id="rub_02_01">Skansens grundare</h2>
+				<h2 id="rub_02_01">Historia</h2>
 				<p>Stycke 4: Skansens grundare Artur Hazelius var orolig för att svensk folkkultur skulle gå förlorad, och han gjorde sommaren 1872 en insamlingsresa, från vilken han återvände med föremål, folkminnen och litteratur.</p>
 				<p>Stycke 5: Samlingarna visades på Drottninggatan 71 (i Davidsons paviljonger) i Stockholm, då under namnet ”Skandinavisk-Etnografiska samlingen”.</p>
 				<p>Stycke 6: Samlingarna växte snabbt och Hazelius erbjöd svenska staten samlingarna som gåva, innan han 1880 grundade den stiftelse som fick namnet "Nordiska museet" vilken hade en byggnadsfond för uppförandet av en museibyggnad för att ersätta de trånga lokalerna på Drottninggatan.</p>
 				<section>
-					<h3 id="rub_03_01">Stockholms Tivoli</h3>
+					<h3 id="rub_03_01">Skansens naturhistoriska avdelning</h3>
 					<p>Stycke 7: År 1850 hade Stockholms Tivoli grundats nere på Djurgårdslätten, med flera teatrar och utskänkningslokaler.</p>
 					<p>Stycke 8: Tivolit hade också ett menageri, där man höll djur i mindre burar, vilket allt tillsammans utgjorde en av Stockholms mest attraktiva nöjesmål, och för Hazelius utgjorde konkurrens, även om Skansen hade en del djur. </p>
 					<p>Stycke 9: Skansen övertog år 1894 en komplett akvarieutställning, med akvarier, fiskar och maskiner.</p>
