Add text content

--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -26,6 +26,9 @@
 								</li>
 							</ol>
 						</li>
+            <li>
+              <a href="rubriker-och-stycken.xhtml#rub_02_02">Skansens Zoologiska avdelning</a>
+            </li>
 					</ol>
 				</li>
 				<li>
