--- a/testbok/EPUB/rubriker-och-stycken.xhtml
+++ b/testbok/EPUB/rubriker-och-stycken.xhtml
@@ -24,6 +24,63 @@
 					<p>Stycke 9: Skansen övertog år 1894 en komplett akvarieutställning, med akvarier, fiskar och maskiner.</p>
 				</section>
 			</section>
+
+      <section>
+        <h2 id="rub_02_02">Skansens Zoologiska avdelning</h2>
+        <p>Skansen räknas som djurpark sedan 1924 då Grillska donationen och Knut och Alice Wallenbergs fond tillförde
+          det nödvändiga kapitalet som krävdes för att år 1924 kunna bygga det dåvarande aphuset, det s.k. Djurhuset,
+          varpå Skansen uppnådde det artantal som då krävdes för att få räknas som djurpark. Det exotiska djurbeståndet
+          innehöll alltifrån babianer, gibbonner och mindre apor, till papegojor, sköldpaddor, och akvariefiskar.
+          Djurhuset blev ett eldorado för generationer av djurintresserade, som med sin närhet till djuren, med ljud och
+          dofter gav ett intryck av att man befann sig i en djungel.</p>
+        <p>Elefanter hade hållits på Tivolit sedan 1860-talet, de hade varit en stor attraktion, och sommaren 1930
+          lånade Skansen in en elefant från Hagenbecks djurpark, som besökarna fick rida på. Det blev en stor succé, som
+          dessutom gav en bra vinst, och man beslutade att köpa en egen elefant.</p>
+        <p>År 1932 inköptes den asiatiska elefantkon Rani, på Skansen omdöpt till Lunkentuss. 1939 anlände elefanten
+          Bambina från Hagenbecks djurpark, som följdes av Fatima 1950. Strax efter att ett nytt elefanthus byggts
+          anlände Nika 1960, Noi kom 1967 och Skansens sista elefant Shiva kom 1984, men innan dess hade Lunkentuss dött
+          1941, Bambina dött 1967, Fatima sålts 1972, och Noi sålts 1981. Elefantridningen avvecklades 1957.</p>
+        <p>Från 1960-talet hölls även pingviner och sjölejon på det nedre Galejanområdet, och i synnerhet sjölejonen var
+          med sina konster en populär attraktion vid utfodringarna. Dessutom byggdes ett nytt aphus med två "apberg"
+          utomhus, i ett för den tiden elegant betongkomplex utformat av Stockholms stadsarkitekt Holger Blom. Dit
+          flyttades under 60-talet schimpanser och gibboner, och det gamla djurhuset hyrdes ut till Jonas Wahlström, som
+          tillsammans med konservatorn Birger Westblom startade upp ett ormterrarium, senare Skansen-Akvariet. Numer
+          ingår även det "nya" aphuset i Skansen-Akvariet.</p>
+        <p>Elefanthuset på Skansen ansågs med tiden för litet eftersom Lantbruksstyrelsen och senare Jordbruksverket
+          krävde större och större ytor för djurparksdjur. Vid slutet av 1980-talet hölls elefanterna på dispens
+          eftersom ytorna inte motsvarade kraven, och Skansen måste bygga ett nytt hus och utomhushägn för få att
+          fortsätta att hålla elefanter.</p>
+        <p>Sjölejonen såldes i början av 1980-talet och pingvinerna i slutet av decenniet. Efter segslitna konflikter
+          beslutade Skansens styrelse 1992 att elefanthållningen på Skansen skulle avvecklas, och de sista två av
+          Skansens elefanter, Nika och Shiva, skänktes till en djurpark i England. Det gamla elefanthuset har sedan dess
+          varit hem åt Colobus-apor.</p>
+        <p>I dag finns främst nordiska vilda djur och svenska lantraser av flera slag på Skansen. På det nedre området
+          finns fortfarande ett fåtal exotiska djurarter kvar som colobusapa, mosambiksiska och astrilder. Skansens
+          björnberg som ursprungligen uppfördes på 1930-talet återinvigdes efter om- och utbyggnad 1998 och håller idag
+          endast brunbjörn. Vidare finns de större svenska rovdjuren som lodjur, varg och järv. Även älg, vildsvin och
+          utter kan ses på Skansen.</p>
+        <p>Visenten är ett paraddjur för Skansen, då man spelade en stor roll under 1920-talet för att rädda arten från
+          att dö ut. Två av de återstående 54 individerna av arten i världen fanns på Skansen. Redan på 1920-talet
+          transporterades visenter från Skansen ned till Bialowieza nationalpark i Polen för re-introduktion. Senast år
+          2009 släpptes en visent född på Skansen, ut i naturen i ett reservat i Rumänien. Alla Skansens visenter får
+          namn som börjar på Sto, (ex. Stocka, Stolle) för att skilja dem från visenter från andra ställen, medan t.ex.
+          Avestas visenters namn börjar på Av (ex Avi).</p>
+        <p>En stor voljär där lappuggla finns ligger intill björnberget, där publiken kan gå in i och se ugglorna utan
+          nät emellan. Berguv har länge funnits på Skansen och över 50 ungar har släppts ut i naturen, de senare åren i
+          samarbete med Skärgårdsstiftelsen. År 2016 invigdes en ny voljär där Vitryggig Hackspett numera hålls.
+          Syftet är att i samarbete med Svenska Naturskyddsföreningen föda upp ungar för att sätta ut i naturen samt
+          informera allmänheten om arten och varför den är allvarligt utrotningshotad i Sverige.</p>
+        <p>Skansen är medlem i Svenska Djurparksföreningen och den europeiska djurparksföreningen EAZA, samt dessutom
+          den globala djurparksorganisationen WAZA.</p>
+        <p>De svenska lantraser som finns i de kulturhistoriska miljöerna på Skansen är alla mer eller mindre hotade och
+          ingår i de genbanker som upprättats för respektive djurras. Fjällnära ko, gutefår, åsenfår och jämtget är
+          exempel på lantraser. Ett antal fjäderfän som skånegås och hedemorahöna tillhör även lantraserna som finns på
+          Skansen.</p>
+        <p>I Skansens stall finns norsk fjordhäst, gotlandsruss, shetlandsponny och nordsvensk. Dem kan barn rida på
+          under vissa tider varje dag. Möjlighet till att åka vagn efter häst finns också. Hästarna används även för att
+          köra brudpar som gifter sig i Seglora kyrka. I det så kallade russgiftet från Gotland finns även en del av
+          Skansens russ.</p>
+      </section>
 		</section>
 	</body>
 </html>
