Change repeated "Test av"

--- a/testbok/EPUB/bildbeskrivningar.xhtml
+++ b/testbok/EPUB/bildbeskrivningar.xhtml
@@ -2,15 +2,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
-  <title>Matte och MathML</title>
+  <title>Bildbeskrivningar</title>
 </head>
 <body>
 <section>
   <div epub:type="pagebreak" id="Page_007" title="7" />
-  <h1>Test av bildbeskrivningar</h1>
+  <h1>Bildbeskrivningar</h1>
 
   <section>
-    <h2 id="rub_02_07">Test av alt-text till en bild</h2>
+    <h2 id="rub_02_07">Alt-text till en bild</h2>
     <p>Lill-Skansen är sedan 1955 barnens djurparksdel. Dess målgrupp var mindre de mindre barnen och avdelningen drev
       verksamheten med mottot "Nu kan dina ungar få träffa våra ungar". </p>
     <p>
@@ -21,7 +21,7 @@
   </section>
 
   <section>
-    <h2 id="rub_03_07">Test av längre beskrivning av en bild</h2>
+    <h2 id="rub_03_07">Längre beskrivning av en bild</h2>
     <p>Skansen har knappt 40 byggnader från de flesta svenska landskap.</p>
 
     <!--
