--- a/testbok/EPUB/listor.xhtml
+++ b/testbok/EPUB/listor.xhtml
@@ -2,14 +2,14 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="sv" lang="sv">
 <head>
-  <title>Test av listor</title>
+  <title>Listor</title>
 </head>
 <body epub:type="bodymatter chapter">
 <section>
 
 
   <div epub:type="pagebreak" id="Page_005" title="5" />
-  <h1>Test av listor</h1>
+  <h1>Listor</h1>
 
 
   <section>
@@ -36,7 +36,7 @@
 
     <p>Texten efter lista.</p>
   </section>
-  
+
   <section>
     <h2>Definitionslista</h2>
 
