--- a/testbok/EPUB/mixed.xhtml
+++ b/testbok/EPUB/mixed.xhtml
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="sv" lang="sv">
 <head>
-  <title>Test av blandat språk</title>
+  <title>Blandade språk</title>
   <style>
     p.ex {
       padding-left: 30px;
     }
-    .fon { 
+    .fon {
       color: rgb(255,0,0);
       font-family: "Lucida Sans Unicode";
     }
@@ -16,7 +16,7 @@
 <body epub:type="bodymatter chapter">
 <section>
 
-  <h1>Test av blandat språk</h1>
+  <h1>Blandade språk</h1>
   <p>Denna text är på svenska. Efter detta stycke följer en engelsk text.</p>
 
   <p class="ex" xml:lang="en" lang="en">
@@ -42,13 +42,13 @@
   </p>
 
   <section>
-    <h2>Test av fonetik</h2>
+    <h2>Fonetik</h2>
     <p>Nedan följer det engelska ordet <em><span xml:lang="en" lang="en">thing</span></em> skrivet med fonetiska tecken.</p>
     <p class="ex"><span class="fon">[&#x03B8;&#x026A;&#x014B;]</span></p>
   </section>
 
   <section>
-    <h2>Test av diakririska tecken</h2>
+    <h2>Diakririska tecken</h2>
     <p>Nedan följer en text på polska med en mängd diakritiska tecken.</p>
     <p class="ex" xml:lang="pl" lang="pl">
       Grupowanie treści za pomocą znaczników postaci ułatwia czytanie i nawigowanie po zawartości, ponieważ jest kolejną przeszkodą w logicznej kolejności
