--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -16,13 +16,13 @@
 					<a href="nav.xhtml">Innehållsförteckning</a>
 				</li>
 				<li>
-					<a href="rubriker-och-stycken.xhtml">Test av rubrik- och styckesindelningar</a>
+					<a href="rubriker-och-stycken.xhtml">Rubrik- och styckesindelningar</a>
 					<ol>
 						<li>
-							<a href="rubriker-och-stycken.xhtml#rub_02_01">Rubrik två</a>
+							<a href="rubriker-och-stycken.xhtml#rub_02_01">Historia</a>
 							<ol>
 								<li>
-									<a href="rubriker-och-stycken.xhtml#rub_03_01">Rubrik tre</a>
+									<a href="rubriker-och-stycken.xhtml#rub_03_01">Skansens naturhistoriska avdelning</a>
 								</li>
 							</ol>
 						</li>
@@ -32,7 +32,7 @@
 					</ol>
 				</li>
 				<li>
-					<a href="tabeller.xhtml">Test av tabeller</a>
+					<a href="tabeller.xhtml">Tabeller</a>
 					<ol>
 						<li>
 							<a href="tabeller.xhtml#rub_02_01">Hoppa ur en tabell</a>
@@ -40,29 +40,29 @@
 					</ol>
 				</li>
 				<li>
-					<a href="sekundart-innehall.xhtml">Test av sekundärt innehåll</a>
+					<a href="sekundart-innehall.xhtml">Sekundärt innehåll</a>
 				</li>
 				<li>
-					<a href="notref-och-fotnoter.xhtml">Test av notreferenser och fotnoter</a>
+					<a href="notref-och-fotnoter.xhtml">Notreferenser och fotnoter</a>
 				</li>
 				<li>
-					<a href="listor.xhtml">Test av listor</a>
+					<a href="listor.xhtml">Listor</a>
 				</li>
         <li>
-          <a href="bildbeskrivningar.xhtml">Test av bildbeskrivningar</a>
+          <a href="bildbeskrivningar.xhtml">Bildbeskrivningar</a>
           <ol>
-            <li><a href="bildbeskrivningar.xhtml#rub_02_07">Test av alt-text till en bild</a></li>
-            <li><a href="bildbeskrivningar.xhtml#rub_03_07">Test av längre beskrivning av en bild</a></li>
+            <li><a href="bildbeskrivningar.xhtml#rub_02_07">Alt-text till en bild</a></li>
+            <li><a href="bildbeskrivningar.xhtml#rub_03_07">Längre beskrivning av en bild</a></li>
           </ol>
         </li>
         <li>
-          <a href="matte-formler.xhtml">Test av matteformler</a>
+          <a href="matte-formler.xhtml">Matteformler</a>
         </li>
         <li>
-          <a href="lankar.xhtml">Test av länkar</a>
+          <a href="lankar.xhtml">Länkar</a>
         </li>
         <li>
-          <a href="mixed.xhtml">Test av blandade språk</a>
+          <a href="mixed.xhtml">Blandade språk</a>
         </li>
 				<li>
 					<a href="extern-fotnoter.xhtml">Fotnoter</a>
