--- a/testbok/EPUB/notref-och-fotnoter.xhtml
+++ b/testbok/EPUB/notref-och-fotnoter.xhtml
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="sv" lang="sv">
 	<head>
-		<title>Test av fotnoter</title>
+		<title>Fotnoter</title>
 	</head>
 	<body epub:type="bodymatter chapter">
 		<section>
 			<div epub:type="pagebreak" id="Page_004" title="4"/>
-			<h1>Test av fotnoter</h1>
+			<h1>Fotnoter</h1>
 			<p>I slutet av denna mening finns en fotnotsreferens.
 				<a class="noteref_footnote" epub:type="noteref" href="#n1">1</a> Detta är text efter länk till
   fotnoten.</p>
