--- a/testbok/EPUB/sekundart-innehall.xhtml
+++ b/testbok/EPUB/sekundart-innehall.xhtml
@@ -2,13 +2,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="sv" lang="sv">
 <head>
-  <title>Test av sekundärt innehåll</title>
+  <title>Sekundärt innehåll</title>
   <link rel="stylesheet" type="text/css" href="css/testbok.css" />
 </head>
 <body epub:type="bodymatter chapter">
 <section>
   <span role="doc-pagebreak" id="Page_003" aria-label="3" />
-  <h1>Test av sekundärt innehåll</h1>
+  <h1>Sekundärt innehåll</h1>
   <section>
     <h2>Sekundärt innehåll ska ej läsas upp automatiskt</h2>
     <p>Efter denna text följer ett sidofält (aside).</p>
