--- a/testbok/EPUB/tabeller.xhtml
+++ b/testbok/EPUB/tabeller.xhtml
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="sv" lang="sv">
 <head>
-    <title>Test av tabeller</title>
+    <title>Tabeller</title>
 </head>
 <body epub:type="bodymatter chapter">
 <span role="doc-pagebreak" id="Page_002" aria-label="2" />
-<h1>Test av tabeller</h1>
+<h1>Tabeller</h1>
 <p>Efter denna text följer en tabell.</p>
 <table border="1">
   <tbody>
