--- a/testbok/EPUB/lankar.xhtml
+++ b/testbok/EPUB/lankar.xhtml
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="sv" lang="sv">
 <head>
-  <title>Test av länkar</title>
+  <title>Länkar</title>
 </head>
 <body epub:type="bodymatter chapter">
 <section>
 
-  <h1>Test av länkar</h1>
+  <h1>Länkar</h1>
 
   <section>
     <h2>Länk inom samma sida</h2>
