--- a/testbok/EPUB/rubriker-och-stycken.xhtml
+++ b/testbok/EPUB/rubriker-och-stycken.xhtml
@@ -2,13 +2,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="sv" lang="sv">
 	<head>
-		<title>Test av rubrik- och styckesindelningstester</title>
+		<title>Rubrik- och styckesindelning</title>
 	</head>
 	<body epub:type="bodymatter chapter">
 		<section>
       <span role="doc-pagebreak" id="Page_001" aria-label="1" />
 			<!-- TODO - visa sidnumren i html? -->
-			<h1>Test av rubrik- och styckesindelningstester</h1>
+			<h1>Rubrik- och styckesindelning</h1>
 			<p>Stycke 1: Skansen invigdes den 11 oktober 1891. Namnet kommer från den skans som Karl XIV Johan lät uppföra åt sin son Oscar I att användas som lekplats, denna skans låg intill nuvarande Håsjöstapeln.</p>
 			<p>Stycke 2: På Skansen finns idag (2014) cirka 140 byggnader från Skandinavien varav den äldsta är Vastveitloftet från 1300-talet.</p>
 			<p>Stycke 3: Skansen övergick den 1 juli 1963 till att bli en stiftelse med Nordiska museet, Stockholms stad och staten som huvudmän.</p>
