--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -16,7 +16,7 @@
 					<a href="nav.xhtml">Innehållsförteckning</a>
 				</li>
 				<li>
-					<a href="rubriker-och-stycken.xhtml">Rubrik- och styckesindelningar</a>
+					<a href="rubriker-och-stycken.xhtml">Skansen</a>
 					<ol>
 						<li>
 							<a href="rubriker-och-stycken.xhtml#rub_02_01">Historia</a>
