Add additional pagebreak

--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -82,24 +82,28 @@
 					<a href="rubriker-och-stycken.xhtml#Page_001">1</a>
 				</li>
 
+        <li>
+          <a href="rubriker-och-stycken.xhtml#Page_001-2">2</a>
+        </li>
+
 				<li>
-					<a href="tabeller.xhtml#Page_002">2</a>
+					<a href="tabeller.xhtml#Page_002">3</a>
 				</li>
 
 				<li>
-					<a href="sekundart-innehall.xhtml#Page_003">3</a>
+					<a href="sekundart-innehall.xhtml#Page_003">4</a>
 				</li>
 				<li>
-					<a href="notref-och-fotnoter.xhtml#Page_004">4</a>
+					<a href="notref-och-fotnoter.xhtml#Page_004">5</a>
 				</li>
 				<li>
-					<a href="listor.xhtml#Page_005">5</a>
+					<a href="listor.xhtml#Page_005">6</a>
 				</li>
 				<li>
-					<a href="matte-formler.xhtml#Page_006">6</a>
+					<a href="matte-formler.xhtml#Page_006">7</a>
 				</li>
 				<li>
-					<a href="bildbeskrivningar.xhtml#Page_007">7</a>
+					<a href="bildbeskrivningar.xhtml#Page_007">8</a>
 				</li>
 			</ol>
 		</nav>
