--- a/testbok/EPUB/rubriker-och-stycken.xhtml
+++ b/testbok/EPUB/rubriker-och-stycken.xhtml
@@ -26,6 +26,7 @@
 			</section>
 
       <section>
+        <span role="doc-pagebreak" id="Page_001-2" aria-label="2" />
         <h2 id="rub_02_02">Skansens Zoologiska avdelning</h2>
         <p>Skansen räknas som djurpark sedan 1924 då Grillska donationen och Knut och Alice Wallenbergs fond tillförde
           det nödvändiga kapitalet som krävdes för att år 1924 kunna bygga det dåvarande aphuset, det s.k. Djurhuset,
