Make page-list visible in navigation

--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -74,7 +74,7 @@
 			</ol>
 		</nav>
 
-		<nav role="doc-pagelist" aria-label="Svartskriftssidor" epub:type="page-list" hidden="hidden">
+		<nav role="doc-pagelist" aria-label="Svartskriftssidor" epub:type="page-list">
       <!-- TODO Läses "Svartskriftssidor" upp två gånger om det både är aria-label och h1? -->
 			<h1>Svartskriftssidor</h1>
 			<ol>
