--- a/testbok/EPUB/bildbeskrivningar.xhtml
+++ b/testbok/EPUB/bildbeskrivningar.xhtml
@@ -14,7 +14,7 @@
     <p>Lill-Skansen är sedan 1955 barnens djurparksdel. Dess målgrupp var mindre de mindre barnen och avdelningen drev
       verksamheten med mottot "Nu kan dina ungar få träffa våra ungar". </p>
     <p>
-      <img src="images/en-hast-skansen.jpg" id="img001" alt="Häst framför häststallet." />
+      <img src="images/en-hast-skansen.jpg" id="img001" alt="Häst framför stall" />
     </p>
     <p class="desc">Det låg först mellan utsiktstornet Bredablick och Bergsmansgården. 1971 flyttades Lill-Skansen till
       sin nuvarande plats.</p>
