Add figure numbering

--- a/testbok/EPUB/bildbeskrivningar.xhtml
+++ b/testbok/EPUB/bildbeskrivningar.xhtml
@@ -34,7 +34,7 @@
     <figure>
       <img src="images/samisk-familj.jpg" alt="Samisk familj vid samevistet." />
       <figcaption>
-        Detta är en längre bildbeskrivning. Det ska vara möjligt att hoppa förbi denna text och komma till resten av innehållet.
+        Figur 1. Detta är en längre bildbeskrivning. Det ska vara möjligt att hoppa förbi denna text och komma till resten av innehållet.
         Byggnaderna är gårdar och stugor som placerades så att hus och gårdar från södra Sverige ligger på
         södra Skansen och byggnader från norra Sverige ligger på norra delen.
       </figcaption>
@@ -91,7 +91,7 @@
       <img src="images/samisk-familj.jpg" alt="Samisk familj vid samevistet."
            aria-describedby="desc-05" />
       <figcaption>
-        Figur 5. Samisk familj.
+        Figur 4. Samisk familj.
         <aside id="desc-05" hidden="hidden">
           <p>
             Byggnaderna är gårdar och stugor som placerades så att hus och gårdar från södra Sverige ligger på
