--- a/testbok/EPUB/notref-och-fotnoter.xhtml
+++ b/testbok/EPUB/notref-och-fotnoter.xhtml
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="sv" lang="sv">
 	<head>
 		<title>Fotnoter</title>
+    <link rel="stylesheet" type="text/css" href="css/testbok.css" />
 	</head>
 	<body epub:type="bodymatter chapter">
 		<section>
