Remove unlinked heading in nav and ncx

--- a/testbok/EPUB/mixed.xhtml
+++ b/testbok/EPUB/mixed.xhtml
@@ -48,7 +48,7 @@
   </section>
 
   <section>
-    <h2>Diakririska tecken</h2>
+    <h2>Diakritiska tecken</h2>
     <p>Nedan följer en text på polska med en mängd diakritiska tecken.</p>
     <p class="ex" xml:lang="pl" lang="pl">
       Grupowanie treści za pomocą znaczników postaci ułatwia czytanie i nawigowanie po zawartości, ponieważ jest kolejną przeszkodą w logicznej kolejności
