--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -30,11 +30,13 @@
 				</li>
 				<li>
 					<a href="tabeller.xhtml">Tabeller</a>
-					<ol>
+			<!-- bortagen rubrik -->
+			<!--		<ol>
 						<li>
 							<a href="tabeller.xhtml#rub_02_01">Hoppa ur en tabell</a>
 						</li>
 					</ol>
+			-->
 				</li>
 				<li>
 					<a href="sekundart-innehall.xhtml">Sekundärt innehåll</a>
