Change content for headings and text

--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -10,26 +10,26 @@
 			<h1 class="title">Innehållsförteckning</h1>
 			<ol>
 				<li>
-					<a href="front.xhtml">Test av EPUB 3.0 som tillgänglig e-bok</a>
+					<a href="001_front.xhtml">Test av EPUB 3.0 som tillgänglig e-bok</a>
 				</li>
 				<li>
-					<a href="rubriker-och-stycken.xhtml">Skansen</a>
+					<a href="002_skansen.xhtml">Skansen</a>
 					<ol>
 						<li>
-							<a href="rubriker-och-stycken.xhtml#rub_02_01">Historia</a>
+							<a href="002_skansen.xhtml#rub_02_01">Historia</a>
 							<ol>
 								<li>
-									<a href="rubriker-och-stycken.xhtml#rub_03_01">Skansens naturhistoriska avdelning</a>
+									<a href="002_skansen.xhtml#rub_03_01">Skansens naturhistoriska avdelning</a>
 								</li>
 							</ol>
 						</li>
             <li>
-              <a href="rubriker-och-stycken.xhtml#rub_02_02">Skansens Zoologiska avdelning</a>
+              <a href="002_skansen.xhtml#rub_02_02">Skansens Zoologiska avdelning</a>
             </li>
 					</ol>
 				</li>
 				<li>
-					<a href="tabeller.xhtml">Tabeller</a>
+					<a href="003_sveriges_tatorter.xhtml">Sveriges största tätorter</a>
 			<!-- bortagen rubrik -->
 			<!--		<ol>
 						<li>
@@ -39,7 +39,7 @@
 			-->
 				</li>
 				<li>
-					<a href="sekundart-innehall.xhtml">Sekundärt innehåll</a>
+					<a href="004_sveriges_ekonomi.xhtml">Sekundärt innehåll</a>
 				</li>
 				<li>
 					<a href="notref-och-fotnoter.xhtml">Notreferenser och fotnoter</a>
@@ -78,19 +78,19 @@
 			<h1>Svartskriftssidor</h1>
 			<ol>
 				<li>
-					<a href="rubriker-och-stycken.xhtml#Page_001">1</a>
+					<a href="002_skansen.xhtml#Page_001">1</a>
 				</li>
 
         <li>
-          <a href="rubriker-och-stycken.xhtml#Page_001-2">2</a>
+          <a href="002_skansen.xhtml#Page_001-2">2</a>
         </li>
 
 				<li>
-					<a href="tabeller.xhtml#Page_002">3</a>
+					<a href="003_sveriges_tatorter.xhtml#Page_002">3</a>
 				</li>
 
 				<li>
-					<a href="sekundart-innehall.xhtml#Page_003">4</a>
+					<a href="004_sveriges_ekonomi.xhtml#Page_003">4</a>
 				</li>
 				<li>
 					<a href="notref-och-fotnoter.xhtml#Page_004">5</a>
@@ -109,7 +109,7 @@
 		<nav epub:type="landmarks">
 			<ol>
 				<li>
-					<a href="rubriker-och-stycken.xhtml" epub:type="bodymatter">Början av boken.</a>
+					<a href="002_skansen.xhtml" epub:type="bodymatter">Början av boken.</a>
 				</li>
 			</ol>
 		</nav>
