Added more content for headings and text

--- a/testbok/EPUB/006_geografi_och_natur.xhtml
+++ b/testbok/EPUB/006_geografi_och_natur.xhtml
@@ -2,43 +2,44 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="sv" lang="sv">
 <head>
-  <title>Listor</title>
+  <title>Geografi och natur</title>
 </head>
 <body epub:type="bodymatter chapter">
 <section>
-
-
   <div epub:type="pagebreak" id="Page_005" title="5" />
-  <h1>Listor</h1>
-
+  <h1>Geografi och natur</h1>
+	<p>Sverige ligger i norra Europa, på östra delen av den skandinaviska halvön och sträcker sig över ungefär 17 latituder (breddgrader) och 15 longituder (meridianer).</p>
 
   <section>
-    <h2>Enkel lista</h2>
-    <p>Efter denna text följer en lista.</p>
-
+    <h2 id="geografi-001">Djur och växter</h2>
+    <p>Sveriges nutida fauna är ett resultat av skilda invandringar efter senaste istiden (jämför Utvecklingen av växt- och djurlivet efter den senaste istiden ovan) i kombination med de gränser som sätts av skiftande klimat, naturgivna miljöfaktorer och inte minst mänskliga aktiviteter.</p>
+	<p>Några av de däggdjursarter som är utbredda över hela fastlandet:</p>
     <ul>
-      <li>choklad</li>
-      <li>vanilj</li>
-      <li>jordgubb</li>
+      <li>Rödräv</li>
+      <li>Hermelin</li>
+      <li>Småvessla</li>
+	  <li>Ekorre</li>
+	  <li>Älg</li>
     </ul>
-
-    <p>Texten efter lista.</p>
+    <p>Några arter har under 1900-talet expanderat norrut, bland dem rådjur.</p>
   </section>
   <section>
-    <h2>Numrerad lista</h2>
-    <p>Efter denna text följer en numrerad lista.</p>
+    <h2 id="geografi-002">Fåglar i sverige</h2>
+    <p>Följande lista anger de fem vanligast förekommande fåglar i Sverige.</p>
 
     <ol>
-      <li>Saab</li>
-      <li>Volvo</li>
-      <li>Volkswagen</li>
+      <li>Talgoxe</li>
+      <li>Blåmes</li>
+      <li>Pilfink</li>
+	  <li>Domherre</li>
+	  <li>Sidensvans</li>
     </ol>
 
-    <p>Texten efter lista.</p>
+    <p>Till skillnad från sin släkting gråsparven har pilfinken ökat i antal och även spridit sig norrut i Sverige under de senaste årtiondena.</p>
   </section>
 
   <section>
-    <h2>Definitionslista</h2>
+    <h2 id="geografi-003">Definitionslista</h2>
 
 
     <dl>
