--- a/testbok/EPUB/extern-fotnoter.xhtml
+++ b/testbok/EPUB/extern-fotnoter.xhtml
@@ -6,9 +6,6 @@
 		<title/>
 	</head>
 	<body>
-		<aside epub:type="footnote" id="n2" role="doc-footnote">
-  Detta är fotnot som sparats i separat fil.
-  Denna text ska ej läsas upp när normal läsordning följs.
-		</aside>
+		<aside epub:type="footnote" id="n2" role="doc-footnote">Gustavs roll i införandet av en svensk arvmonarki ses i dag som grundandet av den moderna nationalstaten Sverige.</aside>
 	</body>
 </html>
