--- a/testbok/EPUB/lankar.xhtml
+++ b/testbok/EPUB/lankar.xhtml
@@ -11,7 +11,7 @@
 
   <section>
     <h2>Länk till annan sida</h2>
-    <p>Här följer en länk till innehåll om <a href="listor.xhtml">listor</a>.</p>
+    <p>Här följer en länk till innehåll om <a href="006_geografi_och_natur.xhtml">listor</a>.</p>
   </section>
 
   <section>
