--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -23,9 +23,9 @@
 								</li>
 							</ol>
 						</li>
-            <li>
-              <a href="002_skansen.xhtml#rub_02_02">Skansens Zoologiska avdelning</a>
-            </li>
+						<li>
+						  <a href="002_skansen.xhtml#rub_02_02">Skansens Zoologiska avdelning</a>
+						</li>
 					</ol>
 				</li>
 				<li>
@@ -39,13 +39,32 @@
 			-->
 				</li>
 				<li>
-					<a href="004_sveriges_ekonomi.xhtml">Sekundärt innehåll</a>
+					<a href="004_sveriges_ekonomi.xhtml">Sveriges ekonomi</a>
 				</li>
 				<li>
-					<a href="notref-och-fotnoter.xhtml">Notreferenser och fotnoter</a>
+					<a href="005_historia.xhtml">Historia</a>
+					<ol>
+					<li>
+						<a href="005_historia.xhtml#sigil_toc_id_2">Vasatiden</a>
+					</li>
+					<li>
+					  <a href="005_historia.xhtml#sigil_toc_id_3">Sverige som stormakt</a>
+					</li>
+					</ol>
 				</li>
 				<li>
-					<a href="listor.xhtml">Listor</a>
+					<a href="006_geografi_och_natur.xhtml">Geografi och natur</a>
+						<ol>
+							<li>
+								<a href="006_geografi_och_natur.xhtml#geografi-001">Djur och växter</a>
+							</li>
+							<li>
+							  <a href="006_geografi_och_natur.xhtml#geografi-002">Fåglar i sverige</a>
+							</li>
+							<li>
+							  <a href="006_geografi_och_natur.xhtml#geografi-003">Definitionslista</a>
+							</li>
+						</ol>
 				</li>
         <li>
           <a href="bildbeskrivningar.xhtml">Bildbeskrivningar</a>
@@ -93,10 +112,10 @@
 					<a href="004_sveriges_ekonomi.xhtml#Page_003">4</a>
 				</li>
 				<li>
-					<a href="notref-och-fotnoter.xhtml#Page_004">5</a>
+					<a href="005_historia.xhtml#Page_004">5</a>
 				</li>
 				<li>
-					<a href="listor.xhtml#Page_005">6</a>
+					<a href="006_geografi_och_natur.xhtml#Page_005">6</a>
 				</li>
 				<li>
 					<a href="matte-formler.xhtml#Page_006">7</a>
