--- a/testbok/EPUB/extern-bildbeskrivningar.xhtml
+++ b/testbok/EPUB/extern-bildbeskrivningar.xhtml
@@ -7,15 +7,13 @@
 </head>
 <body>
 <aside role="doc-footnote" id="desc-02">
-  <a role="doc-backlink" href="bildbeskrivningar.xhtml#fig-02">Figur 2.</a>
-  Denna text beskriver figur 2.
-  Texten ska ej läsas upp när normal läsordning följs.
+  <a role="doc-backlink" href="007_sevardheter.xhtml#fig-02">Figur 2.</a>
+På bilden visas hur byggnaden hyser hela skeppet.
 </aside>
 
 <aside role="doc-footnote" id="desc-03">
-  <a role="doc-backlink" href="bildbeskrivningar.xhtml#fig-03">Figur 3.</a>
-  Denna text beskriver figur 3 och förväntas visas i en popup eller motsvarande.
-  Texten ska ej läsas upp när normal läsordning följs.
+  <a role="doc-backlink" href="007_sevardheter.xhtml#fig-03">Figur 3.</a>
+  Namnet Turning Torso kommer från engelska för "vändande eller svängande bål/överkropp. Bilden visar hur hela konstruktionen vrider sig ett kvarts varv på sin väg upp. 
 </aside>
 </body>
 </html>
