--- a/testbok/EPUB/nav.xhtml
+++ b/testbok/EPUB/nav.xhtml
@@ -67,10 +67,13 @@
 						</ol>
 				</li>
         <li>
-          <a href="bildbeskrivningar.xhtml">Bildbeskrivningar</a>
+          <a href="007_sevardheter.xhtml">Sevärdheter</a>
           <ol>
-            <li><a href="bildbeskrivningar.xhtml#rub_02_07">Alt-text till en bild</a></li>
-            <li><a href="bildbeskrivningar.xhtml#rub_03_07">Längre beskrivning av en bild</a></li>
+            <li><a href="007_sevardheter.xhtml#rub_02_07">En djurpark för barn</a></li>
+            <li><a href="007_sevardheter.xhtml#rub_02_08">Landsbygdens hus</a></li>
+			<li><a href="007_sevardheter.xhtml#rub_02_09">Vasamuseet</a></li>
+			<li><a href="007_sevardheter.xhtml#rub_02_10">Turning Torso</a></li>
+			<li><a href="007_sevardheter.xhtml#rub_02_10">Kebnekaise</a></li>
           </ol>
         </li>
         <li>
@@ -121,7 +124,7 @@
 					<a href="matte-formler.xhtml#Page_006">7</a>
 				</li>
 				<li>
-					<a href="bildbeskrivningar.xhtml#Page_007">8</a>
+					<a href="007_sevardheter.xhtml#Page_007">8</a>
 				</li>
 			</ol>
 		</nav>
