--- a/testbok/EPUB/007_sevardheter.xhtml
+++ b/testbok/EPUB/007_sevardheter.xhtml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops"
+      xml:lang="sv" lang="sv">
 <head>
   <title>Sevärdheter</title>
 </head>
