--- a/testbok/EPUB/extern-bildbeskrivningar.xhtml
+++ b/testbok/EPUB/extern-bildbeskrivningar.xhtml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xml:lang="sv" lang="sv">
 <head>
   <title>Bildbeskrivningar</title>
 </head>
