Fix missing title warning

--- a/testbok/EPUB/extern-fotnoter.xhtml
+++ b/testbok/EPUB/extern-fotnoter.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops"
       xml:lang="sv" lang="sv">
 	<head>
-		<title/>
+    <title>Fotnoter i separat fil</title>
 	</head>
 	<body>
 		<aside epub:type="footnote" id="n2" role="doc-footnote">Gustavs roll i införandet av en svensk arvmonarki ses i dag som grundandet av den moderna nationalstaten Sverige.</aside>
