Fix insufficient contrast warning

--- a/testbok/EPUB/mixed.xhtml
+++ b/testbok/EPUB/mixed.xhtml
@@ -8,7 +8,7 @@
       padding-left: 30px;
     }
     .fon {
-      color: rgb(255,0,0);
+      color: #E00;
       font-family: "Lucida Sans Unicode";
     }
   </style>
