--- a/testbok/EPUB/mixed.xhtml
+++ b/testbok/EPUB/mixed.xhtml
@@ -3,15 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="sv" lang="sv">
 <head>
   <title>Blandade språk</title>
-  <style>
-    p.ex {
-      padding-left: 30px;
-    }
-    .fon {
-      color: #E00;
-      font-family: "Lucida Sans Unicode";
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="css/testbok.css" />
 </head>
 <body epub:type="bodymatter chapter">
 <section>
